# http-lib

./: .gitignore  CMakeLists.txt  build-makefile  main.cpp  tls
client/: CMakeLists.txt  client.cpp
client/include/: base_message.hpp  client.hpp  request.hpp  response.hpp
client/messages/: request.cpp
client/src/: client.cpp  request.cpp  response.cpp
client/tests/: CMakeLists.txt  client_test.cpp  response_test.cpp
httpclient/: CMakeLists.txt
httpclient/include/: httpclient.hpp  request.hpp  response.hpp
httpclient/src/: httpclient.cpp  response.cpp
httpclient/tests/: CMakeLists.txt  client_test.cpp  request_test.cpp  response_test.cpp
include/: client.hpp  logger.hpp
libs/client/: client.cpp  client.hpp  request.hpp
libs/httpclient/: httpclient.cpp  httpclient.hpp
libs/logger/: logger.hpp
sample-server/: Makefile  https.js  index.html
tls/: CMakeLists.txt
tls/include/: tlsclient.hpp
tls/tlsclient/: CMakeLists.txt
tls/tlsclient/src/: tlsclient.cpp
tls/tlsclient/tests/: CMakeLists.txt  tlsclient_test.cpp
tlsclient/: CMakeLists.txt
tlsclient/include/: tlsclient.hpp
tlsclient/src/: tlsclient.cpp
tlsclient/tests/: CMakeLists.txt  tlsclient_test.cpp
unit-tests/: test.cpp
